# QuickNote

./: .gitignore  Cargo.toml  FINAL_SUMMARY.md  GETTING_STARTED.md  GITHUB_PUSH_INSTRUCTIONS.md  README.md  index.html  package-lock.json  package.json
scripts/: build.sh  setup-git.sh
src/: App.tsx  main.rs  main.tsx  styles.css
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src/components/: NoteList.tsx  QuickAddModal.tsx  ReviewMode.tsx  SearchBar.tsx
