[package]
name = "quicknote-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quicknote-app"
path = "main.rs"

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2" }

[profile.release]
lto = true
strip = true
