[package]
name = "quicknote"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quicknote"
path = "main.rs"

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }

[build-dependencies]
tauri-build = { version = "2" }

[profile.release]
lto = true
strip = true
